--- a/sample/react/regacy/index.html
+++ b/sample/react/regacy/index.html
@@ -5,6 +5,33 @@
     <meta charset="UTF-8" />
   </head>
   <body>
+    <div>
+      <input placeholder="TODOを入力" />
+      <button>追加</button>
+    </div>
+    <div>
+      <p>未完了のTODO</p>
+      <ul>
+        <li>
+          <div></div>
+            <p>TODOです</p>
+            <button>完了</button>
+            <button>削除</button>
+          </div>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <p>完了のTODO</p>
+      <ul>
+        <li>
+          <div></div>
+            <p>TODOでした</p>
+            <button>戻す</button>
+          </div>
+        </li>
+      </ul>
+    </div>
     <script type="module" src="./index.mjs"></script>
   </body>
 </html>
