--- a/sample/react/regacy/index.html
+++ b/sample/react/regacy/index.html
@@ -3,9 +3,10 @@
   <head>
     <title>Regacy TODO APP</title>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div>
+    <div class="input-area">
       <input placeholder="TODOを入力" />
       <button>追加</button>
     </div>
