完了のTODOリストに新しい項目を追加し、スタイルを調整

--- a/sample/react/regacy/index.html
+++ b/sample/react/regacy/index.html
@@ -38,6 +38,12 @@
             <button>戻す</button>
           </div>
         </li>
+        <li>
+          <div class="list-row">
+            <p class="todo-item">TODOでした</p>
+            <button>戻す</button>
+          </div>
+        </li>
       </ul>
     </div>
     <script type="module" src="./index.mjs"></script>
